tests/ui/crashes/ice-9463.stderr
error: this arithmetic operation will overflow
  --> $DIR/ice-9463.rs:3:14
   |
LL |     let _x = -1_i32 >> -1;
   |              ^^^^^^^^^^^^ attempt to shift right by `-1_i32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/ice-9463.rs:1:9
   |
LL | #![deny(arithmetic_overflow, const_err)]
   |         ^^^^^^^^^^^^^^^^^^^

error: this arithmetic operation will overflow
  --> $DIR/ice-9463.rs:4:14
   |
LL |     let _y = 1u32 >> 10000000000000u32;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to shift right by `1316134912_u32`, which would overflow

error: literal out of range for `u32`
  --> $DIR/ice-9463.rs:4:22
   |
LL |     let _y = 1u32 >> 10000000000000u32;
   |                      ^^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(overflowing_literals)]` on by default
   = note: the literal `10000000000000u32` does not fit into the type `u32` whose range is `0..=4294967295`

error: aborting due to 3 previous errors

